bug report - outstanding bugs are listed here:

 http://sourceforge.net/tracker/?atid=106663&group_id=6663&func=browse

(to file another bug see the 'submit bug' button on this page).

====================================================================

0.76: please submit patches for this section with actual code/doc
      patches!

* don't zero out password strings during pam_unix's password changing
  function (Bug 419803 - vorlon)
* propagate some definitions to the _pam_aconf.h file - from David Lee
  (Bug 415419 - agmorgan)
* solaris GCC OS_CFLAGS change from David Lee (Bug 415412 - agmorgan)
* added a comment to this CHANGELOG to explain why most of the bugids
  used below appear not to be known to sourceforge [try adding 100000
  to the bugid number.] (Bug 414943 - agmorgan)
* bumped version numbers and also added support for SONAME defines
  that appear not to have survived the great autoconf experiment (Bug
  414669 - agmorgan).

0.75: Sat Apr  7 23:10:50 PDT 2001

                          ** WARNING **

This release contains backwardly incompatible changes to
libpam. Prior versions were buggy - see bugfix for Bug 129775.

                          ** WARNING **

* made 0.75 release (Bug 414665 - agmorgan)
* pam_pwdb has been removed from the suggested pam.conf template. I've
  replaced it with pam_unix. (Bug 227565 - agmorgan)
* pam_limits - Richard M. Yumul reported that "<domain> -" didn't
  work, first fix suggested by Werner Puschitz (Bug 404953 - agmorgan)
* Nicolay Pelov suggested a simple fix for freebsd support (Bug 407282
  - agmorgan)
* Michel D'HOOGE submitted documentation fixes (Bug 408961 - agmorgan)
* fix for module linking directions (Bug 133545 - agmorgan)
* fix for glibc-2.2.2 compilation of pam_issue (Bug 133542 - agmorgan)
* fix pam_userdb to make and link both .o files it needs - converse()
  wasn't being linked! (Bug 132880 - agmorgan)
* added some sys-admin documentation for the pam_tally module (Bug
  126210 - agmorgan).